--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
-<div>
-  <app-like-button [nbLikes]="10"></app-like-button>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <app-pokemon></app-pokemon>
+    </div>
+    <div class="col">
+      <app-pokemon></app-pokemon>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <app-log></app-log>
+    </div>
+  </div>
 </div>
-
