gestion des pokemon avec de vrai valeur

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <app-pokemon></app-pokemon>
+      <app-pokemon [pokemon]="poke1"></app-pokemon>
     </div>
     <div class="col">
-      <app-pokemon></app-pokemon>
+      <app-pokemon [pokemon]="poke2"></app-pokemon>
     </div>
   </div>
   <div class="row">
