--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <header class="mb-4"></header>
   <div class="row">
     <div class="col">
       <app-pokemon [pokemon]="poke1"></app-pokemon>
