--- a/src/app/features/pokemon/pokemon.component.scss
+++ b/src/app/features/pokemon/pokemon.component.scss
@@ -1,6 +1,15 @@
+.card-title {
+  font-weight: 600;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 22px;
+  line-height: 25px;
+}
+
 .attacks {
   display: grid;
-  grid: repeat(2, 2);
-  row-gap: 0.25rem;
-  column-gap: 0.25rem;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  row-gap: 0.3rem;
+  column-gap: 0.3rem;
+  margin: 0.5rem;
 }
