--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,10 @@
   </div>
   <div class="row my-2">
     <div class="col-4 offset-4 d-flex justify-content-center">
-      <button class="btn btn-primary w-100" (click)="onStartFight()">Start fight</button>
+      <button class="btn btn-primary w-100"
+              [ngClass]="arena?.isPaused() ? 'btn-primary':'btn-danger'"
+              (click)="arena?.setPaused(!arena?.isPaused())">{{arena?.isPaused() ? 'Start' : 'Pause'}} fight
+      </button>
     </div>
   </div>
   <div class="row">
