Revert "remove attack and add max-w"
This reverts commit edda64be2bca98d86603a914bad256b355247877.

--- a/src/app/features/pokemon/pokemon.component.html
+++ b/src/app/features/pokemon/pokemon.component.html
@@ -1,4 +1,4 @@
-<div class="card text-white bg-dark mb-3 poke-card">
+<div class="card text-white bg-dark mb-3">
   <div class="card-body">
     <img class="img-fluid card-img-top" [src]="pokemon?.imgUrl" [alt]="pokemon?.name">
     <hr>
@@ -20,11 +20,11 @@
         ></div>
       </div>
     </div>
-    <div class="attacks">
-      <button class="btn btn-warning btn-block">Lance Soleil</button>
-      <button class="btn btn-info btn-block">lame rock</button>
-      <button class="btn btn-secondary btn-block">charge</button>
-      <button class="btn btn-success btn-block">feuillage</button>
-    </div>
+  </div>
+  <div class="attacks">
+    <button class="btn btn-warning btn-block">Lance Soleil</button>
+    <button class="btn btn-info btn-block">lame rock</button>
+    <button class="btn btn-secondary btn-block">charge</button>
+    <button class="btn btn-success btn-block">feuillage</button>
   </div>
 </div>
