--- a/src/app/features/pokemon/pokemon.component.scss
+++ b/src/app/features/pokemon/pokemon.component.scss
@@ -1,3 +1,7 @@
+.dead {
+  filter: grayscale(100%);
+}
+
 .card-title {
   font-weight: 600;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
