--- a/src/app/features/pokemon/pokemon.component.html
+++ b/src/app/features/pokemon/pokemon.component.html
@@ -1,6 +1,6 @@
 <div class="card text-white bg-dark mb-3">
   <div class="card-body">
-    <img class="img-fluid card-img-top" [src]="pokemon?.imgUrl" [alt]="pokemon?.name">
+    <img class="img-fluid card-img-top" [class.dead]="pokemon?.currentLife === 0" [src]="pokemon?.imgUrl" [alt]="pokemon?.name">
     <hr>
 
     <div class="mx-2">
@@ -20,11 +20,5 @@
         ></div>
       </div>
     </div>
-  </div>
-  <div class="attacks">
-    <button class="btn btn-warning btn-block">Lance Soleil</button>
-    <button class="btn btn-info btn-block">lame rock</button>
-    <button class="btn btn-secondary btn-block">charge</button>
-    <button class="btn btn-success btn-block">feuillage</button>
   </div>
 </div>
