create directive for text-color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
+.electric {
+  color: #ffcc33;
+}
+.normal {
+  color: #aaaa99;
+}
+.fire {
+  color: #ff4422;
+}
+
+.water {
+  color: #3399ff;
+}
+
+.grass {
+  color: #77cc55;
+}
+
+.ice {
+  color: #66ccff;
+}
+
+.fighting {
+  color:#bb5544;
+}
+
+.poison {
+  color: #a85497;
+}
+
+.ground {
+  color: #ddbb55;
+}
+
+.flying {
+  color: #8899ff;
+}
+
+.psychic {
+  color: #ff5599;
+}
+.bug {
+  color: #aabb22;
+}
+.rock {
+  color: #bbaa66;
+}
+.ghost {
+  color: #6666bb;
+}
+.dragon {
+  color: #7665ed;
+}
+.dark {
+  color: #775544;
+}
+.steel {
+  color: #aaaabb;
+}
+.fairy {
+  color: #ee99ee;
+}
