--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,14 +13,14 @@
     <div class="col-4 offset-4 d-flex justify-content-center">
       <button class="btn btn-primary w-100"
               [ngClass]="fightService.isPaused() ? 'btn-primary':'btn-danger'"
-              (click)="fightService.setPaused(fightService.isPaused())">{{fightService.isPaused() ? 'Start' : 'Pause'}}
+              (click)="fightService.setPaused(!fightService.isPaused())">{{fightService.isPaused() ? 'Start' : 'Pause'}}
         fight
       </button>
     </div>
   </div>
   <div class="row flex-grow-1">
     <div class="col-12">
-      <app-log [logs]="fightService.getLogs()"></app-log>
+      <app-log></app-log>
     </div>
   </div>
 </div>
