--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,27 @@
-<div class="container vh-100 d-flex flex-column">
-  <header class="mb-4"></header>
-  <div class="row align-items-center">
-    <div class="col-sm-6 col-lg-4 col-xl-3">
-      <app-pokemon [pokemon]="pokemon1"></app-pokemon>
+<main>
+  <div class="container vh-100 d-flex flex-column">
+    <header class="mb-4"></header>
+    <div class="row align-items-center">
+      <div class="col-sm-6 col-lg-4 col-xl-3">
+        <app-pokemon [pokemon]="pokemon1"></app-pokemon>
+      </div>
+      <div class="d-none d-xl-block col-xl-6 text-center"><img src="../assets/versus.png" class="mb-5" alt="versus"></div>
+      <div class="offset-lg-4 offset-xl-0 col-sm-6 col-lg-4 col-xl-3">
+        <app-pokemon [pokemon]="pokemon2"></app-pokemon>
+      </div>
     </div>
-    <div class="d-none d-xl-block col-xl-6 text-center">VS</div>
-    <div class="offset-lg-4 offset-xl-0 col-sm-6 col-lg-4 col-xl-3">
-      <app-pokemon [pokemon]="pokemon2"></app-pokemon>
+    <div class="row my-2">
+      <div class="col-4 offset-4 d-flex justify-content-center">
+        <button class="btn btn-primary w-100"
+                [ngClass]="arena?.isPaused() ? 'btn-primary':'btn-danger'"
+                (click)="arena?.setPaused(!arena?.isPaused())">{{arena?.isPaused() ? 'Start' : 'Pause'}} fight
+        </button>
+      </div>
+    </div>
+    <div class="row flex-grow-1">
+      <div class="col-12">
+        <app-log [logs]="logs"></app-log>
+      </div>
     </div>
   </div>
-  <div class="row my-2">
-    <div class="col-4 offset-4 d-flex justify-content-center">
-      <button class="btn btn-primary w-100"
-              [ngClass]="arena?.isPaused() ? 'btn-primary':'btn-danger'"
-              (click)="arena?.setPaused(!arena?.isPaused())">{{arena?.isPaused() ? 'Start' : 'Pause'}} fight
-      </button>
-    </div>
-  </div>
-  <div class="row flex-grow-1">
-    <div class="col-12">
-      <app-log [logs]="logs"></app-log>
-    </div>
-  </div>
-</div>
+</main>
