--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
 main {
-  background-image: url(../assets/pokemon-battle-arena.jpeg);
+  background-image: url('../assets/pokemon-battle-arena.jpeg');
   background-position: center;
 }
