--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <div class="col-sm-6 col-lg-4 col-xl-3">
         <app-pokemon [pokemon]="pokemon1"></app-pokemon>
       </div>
-      <div class="d-none d-xl-block col-xl-6 text-center"><img src="../assets/versus.png" class="mb-5" alt="versus"></div>
+      <div class="d-none d-xl-block col-xl-6 text-center"><img src="../assets/versus.png" class="mb-5 vs" alt="versus"></div>
       <div class="offset-lg-4 offset-xl-0 col-sm-6 col-lg-4 col-xl-3">
         <app-pokemon [pokemon]="pokemon2"></app-pokemon>
       </div>
