--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,10 @@
 main {
   background-image: url(../assets/pokemon-battle-arena.jpeg);
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.vs {
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
