--- a/src/app/features/pokemon/pokemon.component.html
+++ b/src/app/features/pokemon/pokemon.component.html
@@ -21,7 +21,7 @@
       </div>
       <div *ngIf="pokemon?.moves" class="attacks">
         <ng-template ngFor let-move [ngForOf]="pokemon?.moves">
-          <button [type]="move.type" class="btn btn-primary" disabled>
+          <button [appElementType]="move.type" class="btn btn-primary" disabled>
             {{ move.name }}
           </button>
         </ng-template>
