--- a/src/app/features/pokemon/pokemon.component.html
+++ b/src/app/features/pokemon/pokemon.component.html
@@ -5,7 +5,7 @@
 
     <div class="mx-2">
       <div class="card-title">{{ pokemon?.name }}</div>
-      <div class="d-flex justify-content-end">{{ pokemon?.currentLife }} / {{ pokemon?.maxLife }}</div>
+      <div class="d-flex justify-content-end">{{ pokemon?.currentLife | number: '1.0-2' }} / {{ pokemon?.maxLife }}</div>
       <div class="progress">
         <div
           class="progress-bar progress-bar-striped"
