--- a/src/app/features/pokeselect/selection/selection.component.html
+++ b/src/app/features/pokeselect/selection/selection.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-4">
+<div class="container pt-4 grid lg:grid-col-3">
   <div *ngFor="let poke of pokemons" class="card mb-5">
     <div class="card-body">
       {{ poke.name }}
