--- a/src/app/features/pokemon/pokemon.component.html
+++ b/src/app/features/pokemon/pokemon.component.html
@@ -1,11 +1,13 @@
 <div class="card text-white bg-dark mb-3">
-  <div class="card-body">
-    <img class="img-fluid card-img-top" [class.dead]="pokemon?.currentLife === 0" [src]="pokemon?.imgUrl" [alt]="pokemon?.name">
+  <div *ngIf="pokemon" class="card-body">
+    <img class="img-fluid card-img-top" [class.dead]="pokemon?.currentLife === 0" [src]="pokemon?.imgUrl"
+         [alt]="pokemon?.name">
     <hr>
 
     <div class="mx-2">
       <div class="card-title">{{ pokemon?.name }}</div>
-      <div class="d-flex justify-content-end">{{ pokemon?.currentLife | number: '1.0-2' }} / {{ pokemon?.maxLife }}</div>
+      <div class="d-flex justify-content-end">{{ pokemon?.currentLife | number: '1.0-2' }}
+        / {{ pokemon?.maxLife }}</div>
       <div class="progress">
         <div
           class="progress-bar progress-bar-striped"
@@ -26,6 +28,12 @@
           </button>
         </ng-template>
       </div>
+    </div>
+  </div>
+  <div class="card-body" *ngIf="!pokemon" style="height:550px">
+    <div class="progress h-25">
+      <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" aria-valuenow="100"
+           aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
     </div>
   </div>
 </div>
