--- a/src/app/features/pokeselect/list/list.component.html
+++ b/src/app/features/pokeselect/list/list.component.html
@@ -1,4 +1,5 @@
 <main>
+  <app-choice></app-choice>
   <!-- div fixed at top for with pokemons selection delete and gotoBattle -->
   <div class="container">
     <div class="row top-row">
