--- a/src/app/features/pokeselect/list/list.component.scss
+++ b/src/app/features/pokeselect/list/list.component.scss
@@ -1,6 +1,7 @@
 main {
   background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
   min-height: 100vh;
+  padding-top: 3px;
 }
 
 .top-row {
