--- a/src/app/features/pokeselect/list/list.component.html
+++ b/src/app/features/pokeselect/list/list.component.html
@@ -3,12 +3,12 @@
   <!-- div fixed at top for with pokemons selection delete and gotoBattle -->
   <div class="container">
     <div class="row top-row">
-      <div *ngFor="let poke of pokemons" class="col-md-4 mb-5">
+      <div *ngFor="let poke of pokemons" class="col-xl-3 col-md-4 mb-5">
         <div class="card text-white bg-dark mb-3">
           <div class="card-body">
             <h3 class="text-center">{{ poke.name }}</h3>
           </div>
-          <img src="" alt="IMAGE" style="height: 24rem" />
+          <img [src]="poke.imgUrl" alt="IMAGE" class="img-fluid" />
           <button class="btn-grad">Je te choisi</button>
         </div>
       </div>
