--- a/src/app/features/pokeselect/list/list.component.scss
+++ b/src/app/features/pokeselect/list/list.component.scss
@@ -12,6 +12,10 @@ main {
   position: relative;
 }
 
+img {
+  margin-bottom: 2rem;
+}
+
 .btn-grad {
   background-image: linear-gradient(
     to right,
@@ -25,20 +29,18 @@ main {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  margin-bottom: -20px;
-  padding: 10px 25px;
+  margin-bottom: -15px;
+  padding: 5px 12px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
-  border-radius: 10px;
+  border-radius: 7px;
   display: block;
   border: none;
 }
 
 .btn-grad:hover {
   background-position: right center;
-  color: #fff;
-  text-decoration: none;
 }
