--- a/src/app/features/pokeselect/choice/choice.component.html
+++ b/src/app/features/pokeselect/choice/choice.component.html
@@ -1,17 +1,21 @@
-<div class="card text-white bg-dark">
-  <div class="card-body row">
-    <div class="col">
-      <img
-        src="https://www.pokepedia.fr/images/c/c6/XD001.png"
-        alt="dark lugia"
-      />
+<div class="container">
+  <div class="card text-white bg-dark">
+    <div class="card-body row">
+      <div class="col">
+        <img *ngIf="poke1" [src]="poke1.imgUrl" [alt]="poke1.name" />
+      </div>
+      <div class="col">
+        <img *ngIf="poke2" [src]="poke2.imgUrl" [alt]="poke2.name" />
+      </div>
+      <div class="col">
+        <button
+          (onclick)="gotoBattle()"
+          [disabled]="!poke1 || !poke2"
+          class="btn-grad"
+        >
+          Start !
+        </button>
+      </div>
     </div>
-    <div class="col">
-      <img
-        src="https://resize-gulli.jnsmedia.fr/r/890,__ym__/img//var/jeunesse/storage/images/gulli/chaine-tv/dessins-animes/pokemon/pokemon/pikachu/26571681-1-fre-FR/Pikachu.jpg"
-        alt="pikatchu"
-      />
-    </div>
-    <div class="col"><button class="btn-grad">Start !</button></div>
   </div>
 </div>
