--- a/src/app/features/pokeselect/choice/choice.component.html
+++ b/src/app/features/pokeselect/choice/choice.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col">
         <button
-          (onclick)="gotoBattle()"
+          (click)="gotoBattle()"
           [disabled]="!poke1 || !poke2"
           class="btn-grad"
         >
