--- a/src/app/features/pokeselect/list/list.component.html
+++ b/src/app/features/pokeselect/list/list.component.html
@@ -16,7 +16,7 @@
             <h3 class="text-center">{{ poke.name }}</h3>
           </div>
           <img [src]="poke.imgUrl" alt="IMAGE" class="img-fluid" />
-          <button (onclick)="selectPokemon(i)" class="btn-grad">
+          <button (click)="selectPokemon(i)" class="btn-grad">
             Je te choisi
           </button>
         </div>
