--- a/src/app/features/pokeselect/choice/choice.component.scss
+++ b/src/app/features/pokeselect/choice/choice.component.scss
@@ -1,6 +1,11 @@
 img {
   max-height: 6rem;
 }
+.sticky {
+  position: sticky;
+  top: 3px;
+  z-index: 100;
+}
 
 .btn-grad {
   background-image: linear-gradient(
@@ -29,4 +34,8 @@ img {
 
 .btn-grad:hover {
   background-position: right center;
+}
+
+.btn-outline-danger {
+  background-color: #f8d7da;
 }
