Implement autoplay of music in arena

--- a/src/app/features/arena/arena.component.html
+++ b/src/app/features/arena/arena.component.html
@@ -1,4 +1,8 @@
 <main>
+  <audio></audio>
+  <audio autoplay loop id="playAudio" [volume]="0.025">
+    <source src="/assets/battle_sound_effect.mp3">
+  </audio>
   <div class="container vh-100 d-flex flex-column">
     <header class="mb-4"></header>
     <div class="row align-items-center">
