--- a/src/app/features/pokeselect/selection/selection.component.html
+++ b/src/app/features/pokeselect/selection/selection.component.html
@@ -1,4 +1,5 @@
 <main>
+  <audio></audio>
   <audio autoplay loop id="playAudio" [volume]="0.025">
     <source src="/assets/pokeselect_menu_sound_effect.mp3">
   </audio>
