--- a/src/app/features/pokeselect/list/list.component.html
+++ b/src/app/features/pokeselect/list/list.component.html
@@ -7,22 +7,33 @@
   <!-- div fixed at top for with pokemons selection delete and gotoBattle -->
   <div class="container">
     <div class="row top-row">
+      <div class="col-xl-3 col-md-6 col-sm-12">
+        <div class="mb-3">
+          <label for="searchbar" class="form-label card p-2 text-light bg-dark">Search pokemon</label>
+          <input
+            [formControl]="searchInput"
+            (input)="onSearch()"
+            type="text" class="form-control text-light bg-dark" id="searchbar" placeholder="pikachu">
+        </div>
+      </div>
+    </div>
+    <div class="row">
       <div
-        *ngFor="let poke of pokemons; let i = index"
+        *ngFor="let poke of pokemonsFiltered; let i = index"
         [attr.data-index]="i"
-        class="col-xl-3 col-md-4 mb-5"
+        class="col-xl-2 col-md-3 mb-5"
       >
         <div class="card text-white bg-dark mb-3">
           <div class="card-body">
             <h3 class="text-center text-capitalize">{{ poke.name }}</h3>
           </div>
-          <img [src]="poke.imgUrl" alt="IMAGE" class="img-fluid" />
+          <img [src]="poke.imgUrl" alt="IMAGE" class="img-fluid"/>
           <button
             *ngIf="pokemonSelectioned.length < 2"
             (click)="selectPokemon(i)"
             class="btn-grad"
           >
-            I choice YOU
+            I choose YOU
           </button>
         </div>
       </div>
