--- a/src/app/features/pokemon/pokemon.component.html
+++ b/src/app/features/pokemon/pokemon.component.html
@@ -5,7 +5,7 @@
     <hr>
 
     <div class="mx-2">
-      <div class="card-title">{{ pokemon?.name }}</div>
+      <div class="card-title text-capitalize">{{ pokemon?.name }}</div>
       <div class="d-flex justify-content-end">{{ pokemon?.currentLife | number: '1.0-2' }}
         / {{ pokemon?.maxLife }}</div>
       <div class="progress">
@@ -23,7 +23,7 @@
       </div>
       <div *ngIf="pokemon?.moves" class="attacks">
         <ng-template ngFor let-move [ngForOf]="pokemon?.moves">
-          <button [appElementType]="move.type" class="btn btn-primary" disabled>
+          <button [appElementType]="move.type" class="btn btn-primary text-capitalize" disabled>
             {{ move.name }}
           </button>
         </ng-template>
