--- a/src/app/features/pokeselect/list/list.component.scss
+++ b/src/app/features/pokeselect/list/list.component.scss
@@ -30,6 +30,7 @@ img {
   left: 50%;
   transform: translateX(-50%);
   margin-bottom: -15px;
+  font-size: 14px;
   padding: 5px 12px;
   text-transform: uppercase;
   transition: 0.5s;
@@ -38,4 +39,5 @@ img {
   border-radius: 7px;
   display: block;
   border: none;
+  white-space: nowrap;
 }
